--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -35,7 +35,7 @@
           <li>
             <a href="#"> Account</a>
             <a href="#"> Plan and Billing</a>
-            <a href="#"> Sign Out</a>
+            <%= link_to 'Sign Out', logout_path, method: 'delete' %>
           </li>
         </ul>
       </li>
