--- a/app/views/shared/_messages.html.erb
+++ b/app/views/shared/_messages.html.erb
@@ -1,5 +1,5 @@
 <% flash.each do |name, msg| %>
-  <div class="alert alert-#{name}">
+  <div class="<%= flash_class(name) %>">
     <a class="close" data-dismiss='alert'> &#215;</a>
     <%= content_tag :div, msg, :id => "flash_#{name}" if msg.is_a?(String) %>
   </div>
